# rust-example-api

./: Cargo.toml  Dockerfile  README.md  justfile  request.http
src/: main.rs
src/controller/: mod.rs  person_controller.rs
src/model/: mod.rs  person.rs
src/repository/: mod.rs  person_repository.rs
